# gobby

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .gitmodules  .mcp.json  .pre-commit-config.yaml  99-problems-and-an-agent-is-1.md  AGENTS.md  AUTH.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.bak  CLI_COMMANDS.md  CONTRIBUTING.md  GEMINI.md  GUIDING_PRINCIPLES.md  LICENSE  LICENSE.md  MCP_TOOLS.md  README.md  ROADMAP.md  SECURITY.md  analyze_when.py  ci-cd-failure-tracking.md  coderabbit-suggestions.md  coderabbit.md  comms-code-review.md  create_2048_subtasks_direct.py  create_2048_subtasks_mcp.py  create_2048_tasks.py  create_grid_test_task.py  create_task_via_mcp.py  debug_import.py  dummy_trigger.txt  e2e_failing_tests.txt  errors.txt  gemini-worktree-test-output.txt  gsqz.yaml  incident_report.md  meeseeks-e2e-testing.md  (+25 more)
.agent/tasks/: update_mcp_manager_connect.md
.antigravity/: settings.json.1767728805.backup
.claude/: settings.json  settings.json.1768194242.backup
.claude/agents/: accessibility-tester.md  azure-infra-engineer.md  dotnet-framework-4.8-expert.md  electron-pro.md  embedded-systems.md  error-coordinator.md  iot-engineer.md  it-ops-orchestrator.md  java-architect.md  kotlin-specialist.md  kubernetes-specialist.md  mobile-developer.md  performance-engineer.md  powershell-5.1-expert.md  powershell-security-hardening.md  powershell-ui-architect.md  project-manager.md  prompt-engineer.md  quant-analyst.md  scrum-master.md  swift-expert.md  test-automator.md  vue-expert.md  wordpress-master.md
.claude/commands/: bridge.md  bug.md  context-optimization.md  g.md  gobby-agents.md  gobby-mcp.md  gobby-memory.md  gobby-metrics.md  gobby-sessions.md  gobby-tasks.md  gobby-workflows.md  gobby-worktrees.md  gobby.md  multi-agent-patterns.md  ref.md
.claude/hooks/: README.md  hook_dispatcher.py  validate-settings.py  validate_settings.py
.copilot/: hooks.json
.copilot/hooks/: hook_dispatcher.py
.gemini/: settings.json  settings.json.example
.gemini/hooks/: hook-dispatcher.py  hook_dispatcher.py
.gemini/workflows/: gobby-daemon-mcp.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  claude-code-review.yml  dependency-audit.yml  release.yml  task-sync.yml
.gobby/: agents  analyze_coverage.py  memories.jsonl  plugins  project.json  project.json.bak  prompts  tasks.jsonl  tasks_meta.json  workflows
.gobby/agents/: accessibility-tester.md  ad-security-reviewer.md  backend-developer.md  competitive-analyst.md  database-administrator.md  django-developer.md  documentation-engineer.md  electron-pro.md  error-coordinator.md  golang-pro.md  incident-responder.md  java-architect.md  knowledge-synthesizer.md  kotlin-specialist.md  m365-admin.md  meeseeks-claude.yaml  meeseeks-gemini.yaml  meeseeks.yaml  mobile-developer.md  postgres-pro.md  powershell-7-expert.md  powershell-module-architect.md  python-pro.md  qa-expert.md  rails-expert.md  risk-manager.md  scrum-master.md  slack-expert.md  spring-boot-engineer.md  windows-infra-admin.md
.gobby/commands/: advanced-evaluation.md  context-degradation.md  filesystem-context.md  gobby-agents.md  gobby-mcp.md  gobby-memory.md  gobby-metrics.md  gobby-sessions.md  gobby-tasks.md  gobby-workflows.md  gobby-worktrees.md  memory-systems.md  multi-agent-patterns.md
.gobby/orchestrations/: comms-critical-fixes.md  python-decomposition.md  (+2 more)
.quint/: context.md  quint.db
2048-game/: game.js  index.html  script.js  style.css
docs/: AGENT_INSTRUCTIONS.md  CLI_COMMANDS.md  HTTP_ENDPOINTS.md  MCP_TOOLS.md  spec-format.md  tasks.md
gobby-tui/: go.mod  go.sum  run_tui.sh
rust/gcode/: Cargo.toml
rust/gcode/src/: config.rs  db.rs  main.rs  models.rs  neo4j.rs  output.rs  savings.rs  secrets.rs
rust/gcode/src/commands/: graph.rs  index.rs  mod.rs  search.rs  status.rs  summary.rs  symbols.rs
rust/gcode/src/index/: chunker.rs  hasher.rs  indexer.rs  languages.rs  mod.rs  parser.rs  security.rs  walker.rs
rust/gcode/src/search/: fts.rs  graph_boost.rs  mod.rs  rrf.rs  semantic.rs
rust/gsqz/: Cargo.toml  gsqz.yaml
rust/gsqz/src/: compressor.rs  config.rs  daemon.rs  main.rs
rust/gsqz/src/primitives/: dedup.rs  filter.rs  group.rs  mod.rs  truncate.rs
scripts/: add_pytest_markers.py  cleanup_skills.py  setup-firewall.sh
src/: __init__.py  cli.py  runner.py
templates/: session-handoff.yaml
tests/: __init__.py  conftest.py  run_safe.sh  test_api_messages.py  test_app_context.py  test_config.py  test_config_mcp.py  test_e2e_session_tracking.py  test_hook_types.py  test_hooks_events.py  test_hooks_manager.py  test_http_server.py  test_import_pathing_trap.py  test_mcp_tools.py  test_runner.py  test_sessions_manager.py  test_sessions_transcripts_claude.py  test_skill_learning.py  test_storage_mcp.py  test_storage_memories.py  test_storage_messages.py  test_storage_projects.py  test_storage_sessions.py  test_storage_skills.py  test_sync_tasks.py  test_task_filters.py  test_tools_filesystem.py  test_utils.py  test_utils_logging.py  test_watchdog.py
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.setup.json  vite.config.ts
(+3372 files in other folders)
