[package]
name = "gsqz"
version = "0.1.0"
edition = "2021"
description = "YAML-configurable output compressor for LLM token optimization"
license = "MIT"

[features]
default = ["gobby"]
gobby = ["ureq", "serde_json"]

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
once_cell = "1"

# Gobby-specific (daemon HTTP integration)
ureq = { version = "2", features = ["json"], optional = true }
serde_json = { version = "1", optional = true }

[profile.release]
opt-level = "z"
lto = true
strip = true
